--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "DEBUG=http nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
@@ -12,6 +12,7 @@
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "firebase": "^3.3.2",
+    "lodash": "^4.16.4",
     "morgan": "~1.7.0",
     "q": "^1.4.1",
     "serve-favicon": "~2.3.0"
